--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.3.2",
+    "next-images": "^1.4.0",
+    "next-seo": "^4.4.0",
+    "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
